08-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-service
  annotations:
    cloud.google.com/backend-config: '{"default": "go-backendconfig"}'
spec:
  selector:
    app: go
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
