service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-service
spec:
  selector:
    app: go
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
