06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-ingress
spec:
  rules:
    - host: go.example.com # 실제 도메인으로
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-service # ← 여기서 Service를 참조!
                port:
                  number: 8080
